un-modernize code to support jre 8